@@ -1,7 +1,5 @@
-short_ver = 0.2.0
-long_ver = $(shell git describe --long 2>/dev/null || echo $(short_ver)-0-unknown-g`git describe --always`)
-
 include compat.mk
+include version.mk
 
 PREFIX ?= /usr/local
 LIBDIR ?= $(PREFIX)/lib
