@@ -1,0 +1,4 @@
+html/
+latex/
+omcache_c_api_xml/
+index.rst
