@@ -1,0 +1,6 @@
+===============
+C API Reference
+===============
+
+.. doxygenindex::
+  :project: omcache_c_api
