@@ -1,0 +1,2 @@
+short_ver = 0.2.0
+long_ver = $(shell git describe --long 2>/dev/null || echo $(short_ver)-0-unknown-g`git describe --always`)
